# inapt

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  builder.dockerfile  config.toml  docker-compose.yml  readme.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: code-checking.yml  debian.yml  release-package.yml  release-plz.yml  security-audit.yml  testing.yml
migrations/: 20250121000001_create_github_releases.sql  20250121000002_create_deb_assets.sql  20250121000003_create_indexes.sql  20250121000004_create_release_metadata.sql  20250121000005_create_architecture_metadata.sql  20250228000006_create_apk_assets.sql
package/: config.toml
package/scripts/: preinst
package/systemd/: inapt.default  inapt.service
resources/: alpine-keys-2.5-r0.apk  busybox-1.37.0-r14.apk  curl_8.14.1-2_arm64.deb  private-key.pem  public-key.pem
src/: lib.rs  main.rs
src/adapter_apk/: mod.rs  pkginfo.rs
src/adapter_deb/: deb.rs  file.rs  mod.rs
src/adapter_github/: entity.rs  middleware.rs  mod.rs  releases.rs
src/adapter_github/method/: releases.rs
src/adapter_http_server/: mod.rs
src/adapter_http_server/handler/: apk_index.rs  apk_redirect.rs  by_hash.rs  health.rs  inrelease.rs  mod.rs  packages.rs  pool_redirect.rs  release.rs  release_gpg.rs  translation.rs
src/adapter_http_server/middleware/: tracing.rs
src/adapter_pgp/: cipher.rs  mod.rs
src/adapter_rsa/: mod.rs  signer.rs
src/adapter_sqlite/: mod.rs
src/adapter_storage/: mod.rs
src/adapter_worker/: mod.rs
src/domain/: entity.rs  mod.rs  prelude.rs
src/handler/: packages.rs  pool_redirect.rs
src/tracing/: mod.rs
tests/: e2e.dockerfile  e2e_apk_repository.rs  e2e_apt_repository.rs
