[package]
name = "inapt"
version = "0.1.0"
edition = "2024"
description = "A minimal Debian/Ubuntu APT repository proxy written in Rust. Exposes a valid APT repo structure over HTTP, sourcing .deb packages from GitHub Releases."
documentation = "https://docs.rs/inapt"
repository = "https://github.com/jdrouet/inapt"
license = "AGPL-3.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
keywords = ["apt", "debian", "ubuntu", "proxy", "github"]
categories = ["command-line-utilities", "network-programming", "web-programming::http-server"]
readme = "readme.md"

[dependencies]
anyhow = { version = "1.0" }
ar = "0.9"
axum = { version = "0.8", default-features = false, features = ["http2", "tokio"] }
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
flate2 = "1"     # for .gz
futures = "0.3"
hex = "0.4"
md-5 = "0.10.6"
octocrab = { version = "0.45" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
secrecy = { version = "0.10", default-features = false }
sha2 = "0.10"    # optional: for SHA256 of the .deb
tar = "0.4"
temp-file = "0.1"
thiserror = "2.0.17"
tokio = { version = "1.47", default-features = false, features = ["fs", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
xz2 = "0.1"      # for .xz
zstd = "0.13"    # for .zst

[dev-dependencies]
mockall = "0.13.1"
similar-asserts = "1.7.0"
