[package]
name = "inapt"
version = "0.1.2"
edition = "2024"
description = "A minimal Debian/Ubuntu APT repository proxy written in Rust. Exposes a valid APT repo structure over HTTP, sourcing .deb packages from GitHub Releases."
documentation = "https://docs.rs/inapt"
repository = "https://github.com/jdrouet/inapt"
license = "AGPL-3.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
keywords = ["apt", "debian", "ubuntu", "proxy", "github"]
categories = ["command-line-utilities", "network-programming", "web-programming::http-server"]
readme = "readme.md"

[dependencies]
anyhow = { version = "1.0" }
ar = "0.9"
axum = { version = "0.8", default-features = false, features = ["http2", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
flate2 = "1"     # for .gz
futures = "0.3"
hex = "0.4"
hostname = "0.4"
md-5 = "0.10"
octocrab = { version = "0.46" }
opentelemetry = { version = "0.31", default-features = false }
opentelemetry-appender-tracing = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-roots"] }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs", "metrics", "rt-tokio", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"    # optional: for SHA256 of the .deb
tar = "0.4"
temp-file = "0.1"
thiserror = "2.0"
tokio = { version = "1.47", default-features = false, features = ["fs", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
xz2 = "0.1"      # for .xz
zstd = "0.13"    # for .zst

# opentelemetry.workspace = true
# opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "tls-roots"] }
# opentelemetry-semantic-conventions.workspace = true
# opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
# opentelemetry-appender-tracing = { version = "0.30", features = [
#     "experimental_metadata_attributes",
#     "experimental_use_tracing_span_context",
# ] }
# tracing-opentelemetry.workspace = true

[dev-dependencies]
mockall = "0.13"
similar-asserts = "1.7"

[package.metadata.deb]
name = "inapt"
maintainer-scripts = "package/scripts"
conf-files = ["/etc/default/inapt"]
assets = [
    ["target/release/inapt", "/usr/bin/", "755"],
    ["package/systemd/inapt.default", "/etc/default/inapt", "600"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "package/systemd/"
enable = true
restart-after-upgrade = true
start = true
