[package]
name = "inapt"
version = "0.2.1"
edition = "2024"
description = "A minimal Debian/Ubuntu APT repository proxy written in Rust. Exposes a valid APT repo structure over HTTP, sourcing .deb packages from GitHub Releases."
documentation = "https://docs.rs/inapt"
repository = "https://github.com/jdrouet/inapt"
license = "AGPL-3.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
keywords = ["apt", "debian", "ubuntu", "proxy", "github"]
categories = ["command-line-utilities", "network-programming", "web-programming::http-server"]
readme = "readme.md"
default-run = "inapt"

[[bin]]
name = "inapt"
path = "src/main.rs"

[[bin]]
name = "inapt-genkey"
path = "src/bin/genkeys.rs"

[dependencies]
anyhow = { version = "1.0" }
ar = "0.9"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http2", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
flate2 = "1"     # for .gz
futures = "0.3"
hex = "0.4"
http = "1.4"
md-5 = "0.10"
opentelemetry = { version = "0.31", default-features = false }
opentelemetry-appender-tracing = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-roots"] }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs", "metrics", "rt-tokio", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json" ,"rustls-tls", "stream"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
sequoia-openpgp = { version = "2.1", default-features = false, features = ["allow-experimental-crypto", "allow-variable-time-crypto", "crypto-rust"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"    # optional: for SHA256 of the .deb
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tar = "0.4"
temp-file = "0.1"
thiserror = "2.0"
tokio = { version = "1.48", default-features = false, features = ["fs", "macros", "net", "rt-multi-thread"] }
toml = "0.9.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
xz2 = "0.1"      # for .xz
zstd = "0.13"    # for .zst

[dev-dependencies]
mockall = "0.14"
similar-asserts = "1.7"

[package.metadata.cargo-machete]
ignored = ["md-5"]

[package.metadata.deb]
name = "inapt"
maintainer-scripts = "package/scripts"
conf-files = ["/etc/default/inapt"]
assets = [
    ["target/release/inapt", "/usr/bin/", "755"],
    ["package/systemd/inapt.default", "/etc/default/inapt", "600"],
    ["package/config.toml", "/etc/inapt/config.toml.example", "600"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "package/systemd/"
enable = true
restart-after-upgrade = true
start = true
